--- a/package.json
+++ b/package.json
@@ -31,12 +31,21 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
     "@jest/globals": "^29.7.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "prisma": "^6.1.0",
+    "supertest": "^7.0.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.2",
+    "winston": "^3.17.0",
     "zod": "^3.24.1"
   }
 }
